Implement MaxPool Layer

--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 134,
    "metadata": {
     "scrolled": false
    },
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 135,
    "metadata": {
     "scrolled": true
    },
@@ -237,9 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 136,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -288,14 +288,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 178,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient check passed!\n"
+     ]
+    }
+   ],
    "source": [
     "pool = MaxPoolingLayer(2, 2)\n",
     "result = pool.forward(X)\n",
     "assert result.shape == (2, 1, 1, 2)\n",
-    "\n",
     "assert check_layer_gradient(pool, X)"
    ]
   },
